--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Montserrat: 400,500,700,800"
     /> 
-    <link rel="stylesheet" href="styles.css" /
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <main id="main">
